fix(ci): fix pnpm setup and add tests
- Use pnpm/action-setup@v4 instead of corepack for CI
- Add vitest config and basic smoke tests
- Fix package.json exports order (types first)
- Filter CI to core package only (template is an example)
- Update repository URLs to actual GitHub repo

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,17 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 8
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -18,9 +26,6 @@ jobs:
           node-version: '20'
           cache: 'pnpm'
           registry-url: 'https://registry.npmjs.org'
-
-      - name: Enable pnpm via corepack
-        run: corepack enable pnpm
 
       - name: Install dependencies
         run: pnpm install
