--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,9 +7,9 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     }
   },
   "files": [
@@ -40,12 +40,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/YOUR_USERNAME/electron-license-kit.git"
+    "url": "https://github.com/MacroMan5/electron-license-kit.git"
   },
   "bugs": {
-    "url": "https://github.com/YOUR_USERNAME/electron-license-kit/issues"
+    "url": "https://github.com/MacroMan5/electron-license-kit/issues"
   },
-  "homepage": "https://github.com/YOUR_USERNAME/electron-license-kit#readme",
+  "homepage": "https://github.com/MacroMan5/electron-license-kit#readme",
   "peerDependencies": {
     "electron": ">=25.0.0",
     "electron-updater": ">=6.0.0"
