fix: template build process for static files and app.config
- Fix tsconfig.json rootDir to ./src (remove app.config.ts from include)
- Add copyfiles for HTML/CSS static file copying
- Add compile:config script for app.config.ts
- Use runtime require for app.config to avoid TypeScript path issues
- Fix repository URL format in core package.json

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,7 +40,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MacroMan5/electron-license-kit.git"
+    "url": "git+https://github.com/MacroMan5/electron-license-kit.git"
   },
   "bugs": {
     "url": "https://github.com/MacroMan5/electron-license-kit/issues"
