--- a/templates/vanilla/tsconfig.json
+++ b/templates/vanilla/tsconfig.json
@@ -13,7 +13,7 @@
     "resolveJsonModule": true,
     "declaration": false
   },
-  "include": ["src/**/*", "app.config.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "release"]
 }
 
